cleaning-services-website-static-website-main/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static2-svc
  namespace: static2
spec:
  selector:
    app: static2-deployment
  ports:
  - port: 80
    targetPort: 80
